<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Furore</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="name_placeholder">Name</string>
    <string name="email_placeholder">Email</string>
    <string name="title_activity_selfie_timeline">SelfieTimeline</string>
    <string name="title_activity_selfie_details">SelfieDetails</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_facebook">Facebook</string>
    <string name="facebook_app_id">1609052322640922</string>
    <string name="title_activity_furore_timeline">FuroreTimeline</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="dikshamail"><u>deeksha.kushwaha@gmail.com</u></string>
    <string name="randhirmail"><u>randhirsingh051@gmail.com</u></string>
    <string name="darshanmail"><u>darshan.gowda008@gmail.com</u></string>
    <string name="rohanmail"><u>rohan.carmel@gmail.com</u></string>
    <string name="abhishekmail"><u>abhikori1994@gmail.com</u></string>
    <string name="arjitmail"><u>arjit.c@gmail.com</u></string>
    <string name="antonymail"><u>rohan271995@gmail.com</u></string>
    <string name="title_activity_upload_preview">uploadPreview</string>
    <string name="title_activity_djnight">DJNight</string>
    <string name="title_activity_sponsors">Sponsors</string>
    <string name="dj_night_content1">Last night of the Furore will be the DJ night. The best part of the fest. The electronic music ll rock and tune your hearts.</string>
    <string name="dj_night_content2">DJ Shaan</string>
    <string name="dj_night_content3">(S)haan is the youngest DJ to play in an international music festival. At age 15, he debuted at Asia’s premier music festival – Sunburn 2010, in Goa, India. He is the new kid on the Dance Scene and has played to many packed houses across India and in London.</string>
    <string name="dj_night_content4">In only his first year of playing, (S)haan quickly jumped from opening sets for Funk Agenda and Helium Project, to touring with Miss Nine. (S)haan’s progressive house set attracted thousands of Sunburners, and was unofficially ranked one of the top five favorite sets of the festival. Shaan has played at the biggest festivals in Asia, alongside the biggest names in the industry – Avicii, Afrojack, David Guetta, Hardwell, Swedish House Mafia, Tiesto, Dash Berlin, Michael Woods, to name a few. He proved his mettle in the international market as well, playing for a Global Truce public awareness concert and for an exclusive gig on a private yacht on Temple Pier, London, and at the SUNBURN International Festival in Colombo. Shaan is a SUNBURN Artist and headlines tours Asia on Club and Campus Tours.</string>
    <string name="dj_night_content5">DJ Rohan Kapoor</string>
    <string name="dj_night_content6">Rohan’s style of playing music is quite unique. While he specializes in playing Progressive House, Rohan is capable at spinning wicked tunes across all genres and is capable of keeping a party rocking with ease. He does this by reading crowds and adapts his performance to suit his audience rather than what he feels like listening to. His music tells a story and takes people through a journey as the night progresses.</string>
    <string name="dj_night_content7">Brodha V</string>
    <string name="dj_night_content8">He is a rapper, composer and producer.He is also a professional sound engineer. From the iconic crew Machas with attitude (MWA) . He ll blow your mind with his awesome and catchy lyrics coupled with groovy music.</string>
    <string name="dj_night_content9">Eswara</string>
    <string name="dj_night_content10">Band with mix of all flavours. Its bled of best in all wings of music. Their uniqueness  in  giving fusing rock and folk ll reverberate your hearts with tune of pure awesomeness.</string>
    <string name="dj_night_content11">Hope to see you all there because its going to be one hell of a night you don’t want miss!</string>
    <string name="terms"><a href='http://ieeevit.com/snup1/privacy.html'>By logging in through Facebook you agree to the <u>Terms and Conditions</u></a></string>
    <string name="link"><u>Terms and Conditions</u></string>
    <string name="rules">The winner ll get a free pass to DJ night and ll get a chance to take a selfie with the artist\n\nRULES\n\nYou should upload <u>your</u> selfie or <u>you should be there in the picture</u>\n\nThe picture you upload ll also be uploaded to official facebook page of Furore 15\n\nThe ranking is measured by likes got to your picture in the app as well as on the photos uplaoded on facebook page (Furore 15)\n\nThe winner ll be announced on our facebook page
</string>

</resources>
